2009-12-04  James Hawkins  <jhawkins@chromium.org>

        Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=32095
        Implement WebRegularExpression, a WebKit API for accessing
        WebCore::RegularExpression.

        * WebKit.gyp:
        * public/WebRegularExpression.h: Added.
        * public/WebTextCaseSensitivity.h: Added.
        (WebKit::):
        * src/AssertMatchingEnums.cpp:
        * src/WebRegularExpression.cpp: Added.
        (WebKit::WebRegularExpression::WebRegularExpression):
        (WebKit::WebRegularExpression::~WebRegularExpression):
        (WebKit::WebRegularExpression::match):

2009-12-04  Peter Kasting  <pkasting@google.com>

        Reviewed by Darin Fisher.

        [Chromium] Simplify zoom-related APIs and add a zoom level getter,
        part two: Remove deprecated APIs.
        https://bugs.webkit.org/show_bug.cgi?id=31893

        * public/WebView.h:
        * src/WebViewImpl.cpp:
        * src/WebViewImpl.h:

2009-12-03  Jonathan Dixon  <joth@chromium.org>

        Reviewed by Dimitri Glazkov.

        Bug 32066 - Add enable geolocation flag to WebCore::Settings for Chromium
        https://bugs.webkit.org/show_bug.cgi?id=32066

        Add the plumbing to map WebSettings through to WebCore::Settings

        * features.gypi:
        * public/WebSettings.h: Add setGeolocationEnabled API to interface
        * src/WebSettingsImpl.cpp:
        (WebKit::WebSettingsImpl::setGeolocationEnabled): Calls through to WebCore::Settings::setGeolocationEnabled
        * src/WebSettingsImpl.h: Add setGeolocationEnabled interface function

2009-12-03  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig.

        <rdar://problem/7214236> and http://webkit.org/b/32052 - Implement HTML5 state object history API

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::dispatchDidPushStateWithinPage):
        (WebKit::FrameLoaderClientImpl::dispatchDidReplaceStateWithinPage):